--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,8 @@ span.navbar-text {
 .social-icon {
     display: inline-block;
     margin-left: 14px;
+    justify-content: center;
+    gap: 10px; 
 }
 .social-icon a {
     width: 42px;
@@ -540,7 +542,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 0 0 50px 0;
+  padding: 20px 0 50px 0;
   background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
